# animus

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OLLAMA_AGENT.md  README.md  SECURITY.md  TODO_CHAT_AGENT.md  TODO_NEXT.md  animus.sh  integrate-gorgon.sh  pyproject.toml
.github/workflows/: ci.yml  publish-bootstrap.yml  publish-core.yml  publish-forge.yml  publish-quorum.yml  security.yml
animus/: __init__.py  __main__.py  api.py  autonomous.py  cognitive.py  config.py  dashboard.py  decision.py  entities.py  memory.py  proactive.py  register.py  tasks.py  tools.py  voice.py
animus/forge/: __init__.py  agent.py  budget.py  checkpoint.py  engine.py  loader.py  models.py
animus/integrations/: __init__.py  gorgon.py  manager.py  oauth.py  todoist.py  webhooks.py
animus/integrations/google/: calendar.py
animus/learning/: __init__.py  approval.py  categories.py  guardrails.py  patterns.py  preferences.py  rollback.py  transparency.py
animus/protocols/: __init__.py  intelligence.py  memory.py  safety.py  sync.py
animus/swarm/: __init__.py  engine.py  graph.py  intent.py  models.py
animus/sync/: __init__.py  client.py  discovery.py  protocol.py  server.py  state.py
dev/bench/: data.js
docs/: ANIMUS_CONTEXT.md  ARCHITECTURE.md  BROWSER_AUTOMATION.md  CASE_STUDY.md  CONNECTIVITY.md  CONSCIOUSNESS_QUORUM_BRIDGE.md  CONSTITUTIONAL_PRINCIPLES.md  DEVELOPER_TOOLS.md  EVOLUTION_LOOP.md  ISSUES.md  OLLAMA_SETUP.md  OPENCLAW_COMPARISON.md  ROADMAP.md  SAFETY.md  SECURITY_LAYER.md  USE_CASES.md  WHITEPAPER.md  WORKFLOW_EVOLUTION_CONSTRAINTS.md
docs/reviews/: 2026-02-21-self-improve-deep-dive.md  2026-02-26-structure-review.md
docs/specs/: animus-build-spec.md  animus-landscape-and-additional-tools.md
docs/whitepapers/: animus-whitepaper.md  gorgon-whitepaper.md
examples/: hello_quorum.py  learning_demo.py
scripts/: benchmark.sh  chat.py  review.py
tests/: conftest.py  test_cognitive_mock.py  test_core.py  test_core_coverage.py  test_coverage_boost.py  test_coverage_push.py  test_coverage_push10.py  test_coverage_push11.py  test_coverage_push12.py  test_coverage_push4.py  test_coverage_push5.py  test_coverage_push6.py  test_coverage_push7.py  test_coverage_push8.py  test_coverage_push9.py  test_forge_coverage.py  test_forge_integration.py  test_forge_units.py  test_gorgon.py  test_improvements.py  test_integrations_coverage.py  test_learning_coverage.py  test_logging_sync.py  test_mopup_coverage.py  test_next_level.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_protocol_conformance.py  test_security.py  test_swarm.py  test_voice.py
tools/: animus-discord.service  animus_discord_bot.py  animus_sync.py  fleet-remediate.service  fleet-remediate.timer  fleet_remediate.py  harvest_cron.py
