[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animus"
version = "0.7.0"
description = "An exocortex architecture for personal cognitive sovereignty"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AreteDriver"}
]
keywords = ["ai", "personal-assistant", "exocortex", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ollama>=0.1.0",
    "chromadb>=0.4.22",
    "pyyaml>=6.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.12.0"]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
voice = [
    "openai-whisper>=20231117",
    "pyttsx3>=2.90",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
integrations = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "todoist-api-python>=2.0.0",
]
gorgon = [
    "httpx>=0.26.0",
]
sync = [
    "websockets>=12.0",
    "zeroconf>=0.131.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
]
all = ["animus[anthropic,openai,api,voice,integrations,gorgon,sync,dev]"]

[project.scripts]
animus = "animus.__main__:main"

[project.urls]
Homepage = "https://github.com/AreteDriver/animus"
Repository = "https://github.com/AreteDriver/animus"
Documentation = "https://github.com/AreteDriver/animus#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["animus*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert used in tests

[tool.coverage.run]
source = ["animus"]
branch = true
omit = ["animus/__main__.py"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
