[project]
name = "animus-workspace"
version = "2.0.0"
description = "Animus Monorepo — Personal AI exocortex with multi-agent orchestration"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
